# redrob-ai-ranker

./: .coverage  .gitignore  README.md  SELF_AUDIT.md  app.py  pyproject.toml  rank.py  requirements.txt  submission_metadata.yaml
docs/: ANALYSIS_REPORT.md  ARCHITECTURE.md  FEATURE_CATALOG.md  FINAL_BENCHMARK.md  PHASE_10_SUMMARY.md  PHASE_1_AUDIT.md  PHASE_1_CORRECTION_REPORT.md  PHASE_1_FINAL_REVIEW.md  PHASE_1_FIXES.md  PHASE_1_RELEASE_CONFIRMATION.md  PHASE_1_RELEASE_REPORT.md  PHASE_1_SUMMARY.md  PHASE_2_AUDIT.md  PHASE_2_FINAL_CONFIRMATION.md  PHASE_2_FIXES.md  PHASE_2_RELEASE_REPORT.md  PHASE_2_VALIDATION.md  PHASE_3_FINAL_CONFIRMATION.md  PHASE_3_REVIEW.md  PHASE_3_SUMMARY.md  PHASE_4_CORRECTION_REPORT.md  PHASE_4_FINAL_CONFIRMATION.md  PHASE_4_FREEZE_REPORT.md  PHASE_4_REVIEW.md  PHASE_4_STABLE_TAG_REPORT.md  PHASE_4_SUMMARY.md  PHASE_5_COMPETITION_COMPLIANCE.md  PHASE_5_COMPLIANCE_RECHECK.md  PHASE_5_FINAL_FREEZE_CONFIRMATION.md  PHASE_5_FINAL_READINESS_AUDIT.md  PHASE_5_FREEZE_REPORT.md  PHASE_5_HARDENING_FINAL_VALIDATION.md  PHASE_5_HARDENING_FIX_REPORT.md  PHASE_5_HARDENING_REPORT.md  PHASE_5_HARDENING_VALIDATION.md  PHASE_5_PERFORMANCE_CLARIFICATION.md  PHASE_5_PERFORMANCE_REVIEW.md  PHASE_5_POST_COMMIT_AUDIT.md  PHASE_5_REPRODUCIBILITY_REPORT.md  PHASE_5_REVIEW.md  (+26 more)
src/: __init__.py
src/features/: __init__.py  base.py  (+5 more)
tests/: conftest.py  test_features.py  test_features_behavioral_intelligence.py  test_features_career_intelligence.py  test_features_honeypot_detection.py  test_features_semantic.py  test_loader.py  test_parser.py  test_ranker.py
(+8 files in other folders)
