[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redrob-ai-ranker"
version = "0.5.0"
description = "Intelligent Candidate Discovery & Ranking for the Redrob Hackathon"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}

dependencies = [
    "python-docx==1.2.0",
    "numpy==2.4.4",
    "sentence-transformers==5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
